# cds_etccdi

./: README.md  cds_wrapper.sh  setup.cfg
cds/: cds_db.py  cds_functions.py  cli.py
cds/cdsapi/: api.py
cds/data/: all_values.json  config.json.tmp  etccdi_mon.json  etccdi_mon_base.json  etccdi_mon_nobase.json  etccdi_vars.json  etccdi_yr.json  etccdi_yr_base.json  etccdi_yr_nobase.json  hsi_day.json  hsi_vars.json  model_list.json  model_map.json
